--- a/html/introduce_my_self.html
+++ b/html/introduce_my_self.html
@@ -5,15 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        *{
+            color:white;
+            font-size:20px;
+        }
+        body{
+            height:1060px;
+            background-color: black;
+        }
+        h1{
+            text-align: center;
+            font-size:50px;
+        }
+        #txt{
+            text-align: center;
+        }
+        #mypage{
+            margin-top:200px;
+            animation-name: title1;
+            animation-duration: 2s;
+            animation-fill-mode: forwards;
+            margin-left:30%;
+        }
+        #stack{
+            margin-top:200px;
+            animation-name: title1;
+            animation-duration: 2s;
+            animation-fill-mode: forwards;
+            animation-delay: 1.5s;
+            visibility: hidden;
+            margin-left:30%;
+        }
+        .intro{
+            font-size:40px;
+        }
+        @keyframes title1{
+            from{
+                margin-top:50%;
+            }
+            to{
+                margin-top:100px;
+                visibility: visible;
+            }
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div id="logo">
-            <img src="">
-        </div>
-        <nav>
-
-        </nav>
-    </header>
+    <h1>introduce ohjunsang</h1>
+    <p id="txt">this page is made for introduce ohjunsang</p>
+    <div id="mypage">
+        <p class="intro">WHO I AM?</p>
+        <p>name : oh jun sang</p>
+        <p>age : 17</p>
+        <p>work : 대덕 소프트웨어 마이스터 고등학교</p>
+    </div>
+    <div id="stack">
+        <p class="intro">TECHNICAL STACKS</p>
+        <p>javascript</p>
+        <p>html & css</p>
+        <p>python</p>
+        <p>java</p>
+    </div>
+    <script>
+    </script>
 </body>
 </html>
