자기소개 페이지를 만들고 있습니다
자기소개 페이지 제작 시작

--- a/html/introduce_my_self.html
+++ b/html/introduce_my_self.html
@@ -6,68 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        *{
-            color:white;
+        body
+        {
+            display:flex;
+            justify-content: center;
+        }
+
+        p
+        {
             font-size:20px;
-        }
-        body{
-            height:1060px;
-            background-color: black;
-        }
-        h1{
-            text-align: center;
-            font-size:50px;
-        }
-        #txt{
-            text-align: center;
-        }
-        #mypage{
-            margin-top:200px;
-            animation-name: title1;
-            animation-duration: 2s;
-            animation-fill-mode: forwards;
-            margin-left:30%;
-        }
-        #stack{
-            margin-top:200px;
-            animation-name: title1;
-            animation-duration: 2s;
-            animation-fill-mode: forwards;
-            animation-delay: 1.5s;
-            visibility: hidden;
-            margin-left:30%;
-        }
-        .intro{
-            font-size:40px;
-        }
-        @keyframes title1{
-            from{
-                margin-top:50%;
-            }
-            to{
-                margin-top:100px;
-                visibility: visible;
-            }
         }
     </style>
 </head>
 <body>
-    <h1>introduce ohjunsang</h1>
-    <p id="txt">this page is made for introduce ohjunsang</p>
-    <div id="mypage">
-        <p class="intro">WHO I AM?</p>
-        <p>name : oh jun sang</p>
-        <p>age : 17</p>
-        <p>work : 대덕 소프트웨어 마이스터 고등학교</p>
+    <div id="header">
+        <img src="#"/>
+        <h1>junsang Oh</h1>
     </div>
-    <div id="stack">
-        <p class="intro">TECHNICAL STACKS</p>
-        <p>javascript</p>
-        <p>html & css</p>
-        <p>python</p>
-        <p>java</p>
+        
+    <div id="body">
+        <p></p>
     </div>
-    <script>
-    </script>
+
+    <div id="footer">
+        <p></p>
+    </div>
 </body>
 </html>
